[MODORDERS-1146] Add unit tests and update remove process